--- a/M9_Final_Assignment.ipynb
+++ b/M9_Final_Assignment.ipynb
@@ -16,6 +16,7 @@
    },
    "source": [
     "# Codio Coding Assignment 9.1: GitHub and Advanced Python Functions\n",
+    "Umang Thanki\n",
     "\n",
     "### Learning Outcomes Addressed\n",
     "\n",
